# SPIGA

./: .gitignore  Image_demo.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
assets/colab/: bbox_sportsfan.json
colab_tutorials/: image_demo.ipynb  video_demo.ipynb
colab_tutorials/video_tools/: record.py  utils.py
data/: readme.md
data/annotations/300wprivate/: db_info.json  test.json
data/annotations/300wpublic/: db_info.json  test.json
data/annotations/cofw68/: db_info.json  test.json
data/loaders/: alignments.py  dataloader.py  dl_config.py  transforms.py
data/loaders/augmentors/: boundary.py  heatmaps.py  landmarks.py  modern_posit.py  utils.py
data/models3D/: mean_face_3D_98.txt  visualization.py
data/visualize/: inspect_dataset.py  inspect_heatmaps.py  plotting.py
eval/: results_gen.py
eval/benchmark/: evaluator.py
eval/benchmark/metrics/: landmarks.py  metrics.py  pose.py
eval/results/300wprivate/: metrics_300wprivate_test.txt  results_300wprivate_test.json
eval/results/300wpublic/: results_300wpublic_test.json
eval/results/merlrav/: metrics_merlrav_test.txt
inference/: config.py  framework.py  pretreatment.py
models/: spiga.py
models/cnn/: cnn_multitask.py  coord_conv.py  hourglass.py  layers.py
models/gnn/: gat.py  pose_proj.py  step_regressor.py
spiga/data/annotations/merlrav/: db_info.json
spiga/data/annotations/wflw/: db_info.json
spiga/data/loaders/: alignments.py  dataloader.py  dl_config.py  transforms.py
spiga/data/loaders/augmentors/: boundary.py  landmarks.py  modern_posit.py
spiga/data/models3D/: mean_face_3D_68.txt
spiga/data/visualize/: inspect_dataset.py  inspect_heatmaps.py  plotting.py
spiga/demo/: app.py  readme.md
spiga/demo/analyze/: analyzer.py
spiga/demo/analyze/extract/: processor.py  spiga_processor.py
spiga/demo/analyze/features/: basic.py  face.py
spiga/demo/analyze/track/: get_tracker.py  tracker.py
spiga/demo/analyze/track/retinasort/: config.py  face_tracker.py  zoo.py
spiga/demo/utils/: frames2video.py
spiga/demo/visualize/: plotter.py  viewer.py
spiga/demo/visualize/layouts/: plot_basics.py  plot_bbox.py  plot_headpose.py  plot_landmarks.py
spiga/eval/: results_gen.py
spiga/eval/benchmark/: evaluator.py  readme.md
spiga/eval/benchmark/metrics/: landmarks.py  pose.py
spiga/eval/results/300wpublic/: metrics_300wpublic_test.txt
spiga/eval/results/cofw68/: metrics_cofw68_test.txt  results_cofw68_test.json
spiga/eval/results/wflw/: metrics_wflw_test.txt
spiga/inference/: config.py  framework.py  pretreatment.py
spiga/models/: spiga.py
spiga/models/cnn/: cnn_multitask.py  hourglass.py  transform_e2p.py
spiga/models/gnn/: gat.py  layers.py  step_regressor.py
