# Configuration of the Python project

# Configure setup.py
[metadata]
name = spiga
version = 1.0.0
author = Andres Prados Torreblanca
author_email = andresprator@gmail.com
description = Shape Preserving Facial Landmarks with Graph Attention Networks
long_description = file: README.md
license = BSD-3-Clause


[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    matplotlib>=3.2.1
    numpy>=1.18.2
    opencv-python>=4.2.0.32
    Pillow>=7.0.0
    torch>=1.4.0
    torchvision>=0.5.0
    torchaudio
    scipy
    scikit-learn

[options.packages.find]
exclude =
    spiga.data.annotations*
    spiga.eval.results*
    colab_tutorials*


