# Configuration of the Python project

# Configure setup.py
[metadata]
name = spiga
version = 0.0.6
author = Andres Prados Torreblanca
author_email = andresprator@gmail.com
description = SPIGA: Shape Preserving Facial Landmarks with Graph Attention Networks
long_description = file: README.md
long_description_content_type= text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/andresprados/SPIGA
project_urls =
    Homepage =  https://bmvc2022.mpi-inf.mpg.de/155/
    SPIGA Paper = https://bmvc2022.mpi-inf.mpg.de/0155.pdf
    Bug Tracker = https://github.com/andresprados/SPIGA/issues
keywords =
    Computer Vision
    Face Alignment
    Head Pose Estimation
    Pytorch
    CNN
    GNN
    BMVC2022
    WFLW
    300W
    Merlrav
    COFW

classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Intended Audience :: Education
        Operating System :: OS Independent
        Environment :: GPU
        Environment :: Console
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering :: Artificial Intelligence
        Topic :: Scientific/Engineering :: Image Processing
        Topic :: Software Development :: Libraries
        Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    matplotlib>=3.2.1
    numpy>=1.18.2
    opencv-python>=4.2.0.32
    Pillow>=7.0.0
    torch>=1.4.0
    torchvision>=0.5.0
    torchaudio
    scipy
    scikit-learn

[options.extras_require]
demo =
    retinaface-py>=0.0.2
    sort-tracker-py>= 1.0.2

[options.packages.find]
exclude =
    spiga.eval.results*
    colab_tutorials*
